[tool.poetry]
name = "liasis"
version = "2019.1.0"
description = "A Pythonic Clean Architecture for the Web"
authors = ["Johnny <johnny.w.santos@gmail.com>"]
license = "MIT"
packages = [
    { include = "liasis" }
]

[tool.poetry.scripts]
poetry = 'liasis.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.650.0"
sphinx = "^2.2"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
