[tool.poetry]
name = "liasis"
version = "2019.1.0"
description = "A Pythonic Clean Architecture for the Web"
authors = ["Johnny <johnny.w.santos@gmail.com>"]
license = "MIT"
packages = [
    { include = "liasis" }
]

[tool.poetry.scripts]
poetry = 'liasis.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = {version = "^3.7", python = '~3.7'}

[tool.poetry.dev-dependencies]
sphinx = "^3.0.2"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
